--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ a:hover{color:#e27f87; text-decoration:none; position:relative; left:-7px}
   }
 
 
+
 </style>
 <!--p2 is cat color, meow-->
 <!-- p is just standard text-->
@@ -151,11 +152,11 @@ a:hover{color:#e27f87; text-decoration:none; position:relative; left:-7px}
     </li>
 
 <p>
-    thats mostly it, im not the best at talking about myself, really.
+    that's mostly it. im not the best at talking about myself, really.
 </p>
 
 <p>
-    if you want to contact me for some reason,     <a href="https://aaesop.org/contact.html" style="font-family: 'Courier New', Courier, monospace; color: #51838b; font-size: 14px;">click here. </a>
+    if you want to contact me for some reason,     <a href="https://aaesop.org/contact.html" style="font-family: 'Courier New', Courier, monospace; color: #e27f87; font-size: 14px;">click here. </a>
 </p>
 
  <p> 
@@ -167,22 +168,22 @@ a:hover{color:#e27f87; text-decoration:none; position:relative; left:-7px}
 
 
 <!-- place holder for now before text here comes-->
-<div style="height: 4px;"></div>
+<div style="height: 12px;"></div>
 
 
 <div align="right">
 
  <p>
- ╱|、ㅤㅤ
+ ╱|、ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
 </p>
 <p>
- meow!ㅤㅤ(˚ˎ 。7ㅤㅤ
+ meow!ㅤㅤ(˚ˎ 。7ㅤ
 </p>
 <p>
- |、˜〵ㅤㅤ          
+ |、˜\ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ
 </p>
 <p>
-ㅤㅤㅤㅤㅤ じしˍ,)ノ
+ㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤじしˍ,)ノㅤㅤㅤㅤㅤ
 </p>
 
 </div>
