--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
   <div align = "left">
 <img src = madohomu.gif width="300" height="200">
   </div>
+<p>
+  (c) avery cc by-sa
 
+</p>
+    
 <br class = "footer_space">
 
 <div align="center">
