--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </p>
 
 <p>
-  well, its called aaesop.org, i guess, so you can read some of aesop's fables <a href="https://aaesop.org/fables.html"> [here]</a>. they're quite amusing to me.
+  well, it's called aaesop.org, i guess, so you can read some of aesop's fables <a href="https://aaesop.org/fables.html"> [here]</a>. they're quite amusing to me.
 </p>
 
 
