Update personal interests in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </p>
   
 <p>
-  im currently a senior in high school and im not really sure what to put here yet... like computers, photography, and art though.
+  im currently a senior in high school and im not really sure what to put here yet... i like computers, photography, and art though.
 </p>
 
 <p>
