--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
   <title>index @ aaesop.org</title>
   <link rel="stylesheet" href="style.css">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+  
 
-  <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="apple-touch-icon" href="favicons/apple-touch-icon.png" sizes="180x180">
   <link rel="android-chrome" href="favicons/android-chrome-192x192.png" sizes="192x192" type="image/png">
@@ -46,9 +46,6 @@
 
 
 
-  <div align = "left">
-<img src = madohomu.gif width="300" height="200">
-  </div>
 <p>
   (c) avery cc by-sa
 
